--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ pyzxing==1.0.1
 scipy==1.5.4
 Pillow==8.2.0
 pyserial==3.5
-torch==1.7.1+cpu torchvision==0.8.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
-rembg>=1.0.25
+torch==1.7.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.8.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
+rembg==1.0.24
